find_package(GTest CONFIG REQUIRED)

add_executable(agent_test agent_test.cpp)
configure_target(agent_test)
target_include_directories(agent_test PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../src)
target_link_libraries(agent_test PRIVATE Agent GTest::gtest GTest::gmock)
if(NOT WIN32)
add_test(NAME AgentTest COMMAND agent_test)
endif()

add_executable(task_manager_test task_manager_test.cpp)
configure_target(task_manager_test)
target_include_directories(task_manager_test PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../src)
target_link_libraries(task_manager_test PRIVATE Agent GTest::gtest)
add_test(NAME TaskManagerTest COMMAND task_manager_test)

add_executable(agent_registration_test agent_registration_test.cpp)
configure_target(agent_registration_test)
target_include_directories(agent_registration_test PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../src)
target_link_libraries(agent_registration_test PRIVATE Agent GTest::gmock GTest::gtest)
add_test(NAME AgentRegistrationTest COMMAND agent_registration_test)

add_executable(signal_handler_test signal_handler_test.cpp)
configure_target(signal_handler_test)
target_include_directories(signal_handler_test PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../src)
target_link_libraries(signal_handler_test PRIVATE Agent GTest::gtest)
add_test(NAME SignalHandlerTest COMMAND signal_handler_test)

add_executable(message_queue_utils_test message_queue_utils_test.cpp)
configure_target(message_queue_utils_test)
target_include_directories(message_queue_utils_test PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../src)
target_link_libraries(message_queue_utils_test PRIVATE Agent MultiTypeQueue GTest::gtest GTest::gmock)
add_test(NAME MessageQueueUtilsTest COMMAND message_queue_utils_test)

add_executable(cmd_ln_parser_test cmd_ln_parser_test.cpp)
configure_target(cmd_ln_parser_test)
target_link_libraries(cmd_ln_parser_test PRIVATE Agent GTest::gtest)
add_test(NAME CommandlineParserTest COMMAND cmd_ln_parser_test)

if(UNIX AND NOT APPLE)
    add_executable(unix_daemon_test unix_daemon_test.cpp)
    configure_target(unix_daemon_test)
    target_include_directories(unix_daemon_test PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../src)
    target_link_libraries(unix_daemon_test PRIVATE Agent GTest::gtest)
    add_test(NAME UnixDaemonTest COMMAND unix_daemon_test)
endif()

if(WIN32)
    add_executable(windows_service_test windows_service_test.cpp)
    configure_target(windows_service_test)
    target_include_directories(windows_service_test PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../src)
    target_link_libraries(windows_service_test PRIVATE Agent GTest::gtest GTest::gtest_main GTest::gmock GTest::gmock_main)
    add_test(NAME WindowsServiceTest COMMAND windows_service_test)
endif()
