cmake_minimum_required(VERSION 3.22)

set(CMAKE_TOOLCHAIN_FILE "${CMAKE_SOURCE_DIR}/../../vcpkg/scripts/buildsystems/vcpkg.cmake")
set(VCPKG_MANIFEST_DIR ${CMAKE_SOURCE_DIR}/../../)

project(Config)

add_library(Config INTERFACE)

include(../../cmake/config.cmake)

configure_file(
    "${CMAKE_CURRENT_SOURCE_DIR}/include/config.h.in"
    "${CMAKE_CURRENT_BINARY_DIR}/include/config.h"
)

# Incluir el directorio donde está el archivo generado
target_include_directories(Config INTERFACE
    "${CMAKE_CURRENT_BINARY_DIR}/include"
)
